--- a/examples/advisories/openlayers/index.html
+++ b/examples/advisories/openlayers/index.html
@@ -17,14 +17,14 @@
       function initialize() {
         require.setStrategy('openlayers');
         require([
-          'vendor/jquery',
-          'vendor/underscore',
+          'jquery',
+          'underscore',
           'ai/maps/map',
           'ai/maps/layers/googleroadmap',
           'ai/maps/layers/aerisadvisorieskml'
         ], function() {
-          window.$ = require('vendor/jquery');
-          window._ = require('vendor/underscore');
+          window.$ = require('jquery');
+          window._ = require('underscore');
 
           var map = new aeris.maps.Map("map-canvas", {
             baseLayer: new aeris.maps.layers.GoogleRoadMap(),
